--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -20,5 +20,10 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    // "vite.config.ts",
+    "web/vite.config.ts",
+    // "web/vite.config.ts",
+    // "web/vite.config.ts",
+  ]
 }
