--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --config ./web/vite.config.ts",
-    "build": "vue-tsc -b && vite build --config ./web/vite.config.ts",
+    "dev": "npm run dev:web & npm run dev:admin",
+    "dev:web": "VITE_ROOT=./web vite --config ./web/vite.config.ts",
+    "dev:admin": "VITE_ROOT=./admin vite --config ./admin/vite.config.ts",
+    "type": "vue-tsc -b",
+    "build:web": "vite build --config ./web/vite.config.ts",
+    "build:admin": "vite build --config ./admin/vite.config.ts",
+    "build": "npm run type & npm run build:web & npm run build:admin",
     "preview": "vite preview --config ./web/vite.config.ts"
   },
   "keywords": [],
@@ -19,7 +24,11 @@
   "devDependencies": {
     "@types/node": "^22.10.4",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/runtime-core": "^3.5.13",
+    "@vue/runtime-dom": "^3.5.13",
     "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-vue": "^9.32.0",
     "typescript": "^5.7.2",
     "vite": "^6.0.7",
     "vue-tsc": "^2.2.0"
