--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.4",
+    "@unhead/vue": "^1.11.14",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/runtime-core": "^3.5.13",
     "@vue/runtime-dom": "^3.5.13",
@@ -31,6 +32,8 @@
     "eslint-plugin-vue": "^9.32.0",
     "typescript": "^5.7.2",
     "vite": "^6.0.7",
+    "vite-ssg": "^0.24.3",
+    "vue-router": "^4.5.0",
     "vue-tsc": "^2.2.0"
   }
 }
