--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "build:admin": "vite build --config ./admin/vite.config.ts",
     "build:cms": "vite build --config ./cms/vite.config.ts",
     "build": "npm run type && npm run build:web && npm run build:admin && npm run build:cms",
-    "_preview:web": "vite preview --config ./web/vite.config.ts",
-    "test:serve": "node server/index.js"
+    "test:serve": "npm run build && node server/index.js",
+    "test:serveonly": "node server/index.js",
+    "_preview:web": "vite preview --config ./web/vite.config.ts"
   },
   "keywords": [],
   "author": "",
@@ -37,6 +38,8 @@
     "eslint": "^9.17.0",
     "eslint-plugin-vue": "^9.32.0",
     "express": "^4.21.2",
+    "koa": "^2.15.3",
+    "koa-static": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
