--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "dev:web": "VITE_MODE=local vite --config ./web/vite.config.ts",
     "dev:admin": "VITE_MODE=local vite --config ./admin/vite.config.ts",
     "dev:cms": "VITE_MODE=local vite --config ./cms/vite.config.ts",
+    "devserve": "npm run devserve:web && npm run devserve:admin && npm run devserve:cms",
+    "devserve:web": "pm2 start 'npm run dev:web' --name web",
+    "devserve:admin": "pm2 start 'npm run dev:admin' --name admin",
+    "devserve:cms": "pm2 start 'npm run dev:cms' --name cms",
     "type": "vue-tsc",
     "build:web": "vite-ssg build --config ./web/vite.config.ts",
     "build:admin": "vite build --config ./admin/vite.config.ts",
